--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Jerk Shack Restaurant</title>
-    <!-- Import google fonts -->
+    <!-- Import Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Piazzolla:wght@100&display=swap" rel="stylesheet">
+    <!--  Import Font Awesome-->
+    <script src="https://kit.fontawesome.com/142a7d352d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
