--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- Icon to be shown on apple device -->
+    <!-- Icons to be shown on apple device -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-device.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon-iphone-60x60.png">
     <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/apple-touch-icon-ipad-76x76.png">
