--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Jerk Shack Restaurant"
     />
     <!-- Icons to be shown on apple device -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-device.png" />
